# ozIMMU

./: .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  Makefile  README.md
include/ozimma/: ozimma.hpp
include/ozimmu/: ozimmu.hpp
include/oztcecgemm/: oztcecgemm.hpp
src/: config.cu  config.hpp  cublas.cu  cublas_helper.cu  cublas_helper.hpp  culip.cu  culip.hpp  gemm.cu  handle.cu  handle.hpp  split.cu  split.hpp  utils.hpp
test/: main_test.cu
